werk werk werk werk

--- a/localisation/PB_Ireland_l_english.yml
+++ b/localisation/PB_Ireland_l_english.yml
@@ -9,8 +9,12 @@
   ##########################  
   IRE_lb_party:0 "IPP"
   IRE_lb_party_long:0 "Irish Parliamentary Party"
+  IRE_lb_party_coalition:0 "IUC"
+  IRE_lb_party_coalition_long:0 "Irish Unity Coalition"
   IRE_cn_party:0 "IDL"
   IRE_cn_party_long:0 "Irish Dominion League"
+  IRE_cn_party_coalition:0 "IUC"
+  IRE_cn_party_coalition_long:0 "Irish Unity Coalition"
   IRE_jc_party:0 "ILF"
   IRE_jc_party_long:0 "Irish Liberation Front"
   IRE_jc_party_ica:0 "ICA"
@@ -23,16 +27,16 @@
   IRE_rc_party_long:0 "Ulster Imperial Regiment"
   IRE_rc_party_revolt:0 "IIG"
   IRE_rc_party_revolt_long:0 "Irish Imperial Guards"
-  IRE_al_party:0 "ILP"
-  IRE_al_party_long:0 "Irish Liberal Party"
+  IRE_an_party:0 "ILP"
+  IRE_an_party_long:0 "Irish Liberal Party"
   IRE_ds_party:0 "ICF"
   IRE_ds_party_long:0 "Irish Commonwealth Forces"
   
   ##########################
   # FOCUSES
   ##########################  
-  IRE_mac_diarmada_gov:0 "Mac Diarmada's Cabinet"
-  IRE_mac_diarmada_gov_desc:0 "The 1932 Elections provided another inconclusive result for the Commonwealth parliament, not quite allowing an IDL victory but failing to deliver Mac Diarmada a conclusive victory. Still, the result cannot be described as disastrous and there remains plenty of work to be done."
+  IRE_devlin_gov:0 "Devlin's Cabinet"
+  IRE_devlin_gov_desc:0 "Despite the division and the heated political rhetoric, the 1932 Irish Elections, ostensiably called by Joseph Devlin to solidify his majority, failed to provide a conclusive result. The IPP has failed to make any major political gains and has been forced to rely on a shaky coalition of independents and local parties. Our first order of business should be shoring up our agreements with these parties."
   IRE_military_exercises:0 "Permit Independent ICF Exercises"
   IRE_military_exercises_desc:0 "It is no secret that the Irish Commonwealth Forces lack the military experience of other nations, which has left us overly reliant on British arms and experience. By hosting ICF military exercises independent of the British, we can assert the relative independence of the Irish Commonwealth and our growing confidence on the battlefield."
   IRE_industrial_drive:0 "Enact Industrial Promises"
@@ -62,24 +66,48 @@
   ##########################  
   
   ireland.1.t:0 "The Secession Crisis"
-  ireland.1.a:0 "Hold the Line, lads!"
-  ireland.1.b:0 "Come out and fight me like a man!" 
+  ireland.1.d:0 "The centre could not hold and the ICA has made its move. After seizing the Irish Parliament in Dublin, Lynch and his allies issued a unilateral declaration of independence from the British Empire. Though the Parliament was mostly empty, most reasonable politicians having left the city as tensions boiled, it was undoubtedly an electrifying speech. Knowing that the ICA will not be removed without force, the remnants of the Irish Parliament have been forced to muster their troops outside Dublin and prepare for confrontation.\n\nOn the other side of the coin, the Irish Imperial Guards and their leader were quick to issue a statement which declared both the Dublin Government and the ICA as illegitimate. Strangely, they have not made any move yet..."
+  ireland.1.a:0 "We shall pray reinforcements are on their way..."
+  ireland.1.b:0 "Rally to the Citizen's Army!" 
   ireland.1.c:0 "The Government has failed us, the Guard must step in!"
-  ireland.4.t:0 "Mac Diarmada Approaches the IDL"
+  ireland.2.t:0 "Formation of the Irish Imperial Guards"
+  ireland.2.d:0 "Claiming that law and order in Ireland has been thrown aside by the government, General Brookeborough has announced the formation of the Irish Imperial Guard, a paramilitary group to 'preserve both British and Irish interests in the face of chaos and rebellion.' Normally, this move would be all that was needed to court marshal the offending General but these are not normal times. With the vast majority of the Ulster Imperial Regiment flocking to his side, Brookeborough is in an unrivalled position and the cabinet fear that any attempt to bring the man in would undoubtedly see bloodshed."
+  ireland.2.a:0 "For the love of God..."
+  ireland.3.t:0 "Formation of the 'Citizen's Army'"
+  ireland.3.d:0 "The downward spiral continues. With the ILF filling the hole where once the IVA stood and quickly gathering immense public support, the Chairman of the ILF, Liam Lynch, appeared publicly to a massive crowd in Dublin to announce a change in course for the Irish Liberation Front, which would henceforth be known as the 'Irish Citizen's Army'. Though Lynch already has the support of a large swathe of the country, it would appear he is trying to widen his banner even further, inviting those who once might have doubted to join him 'hand in hand together'."
+  ireland.3.a:0 "And the Constabulary just watches..."
+  ireland.4.t:0 "Devlin Approaches the IDL"
   ireland.5.t:0 "Ireland hit by the Crisis!"
   ireland.5.d:0 "The Irish economy, already weakened by its involvement in the Great War, was ill-prepared for the chaos wrought by the London Stock Crisis. With the Commonwealth's economy having been increasingly tangled with Imperial markets, the initial effects of the Crisis have inflicted havoc on the markets!"
   ireland.5.a:0 "We must weather the storm!"
-  ireland.6.t:0 "General J. Twaddell Protests ICF Exercises!"
-  ireland.6.d:0 "As the extensive two weeks of military exercises for the ICF almost reach their end, General William J. Twaddell of the Ulster Imperial Regiment has launched a fiery attack on the exercises. Speaking to his regiment and limited members of the public, the General decried the exercises as 'a bastion of radical republican activity' where Irish Liberation Forces 'openly fraternised with sympathetic officers'. Whilst he provided no evidence to support these accusations, he went on to claim that the '(Irish Commonwealth) Government's eagerness to conduct exercises without our British Allies could only point to a republican infestation reaching the highest levels'\n\nThe Government has so far offered no response to the accusations but the comments show the sharp division which divides the ICF."
+  ireland.6.t:0 "General Brookeborough Protests ICF Exercises!"
+  ireland.6.d:0 "As the extensive two weeks of military exercises for the ICF almost reach their end, General Brookeborough of the Ulster Imperial Regiment has launched a fiery attack on the exercises. Speaking to his regiment and limited members of the public, the General decried the exercises as 'a bastion of radical republican activity' where Irish Liberation Forces 'openly fraternised with sympathetic officers'. Whilst he provided no evidence to support these accusations, he went on to claim that the '(Irish Commonwealth) Government's eagerness to conduct exercises without our British Allies could only point to a republican infestation reaching the highest levels'\n\nThe Government has so far offered no response to the accusations but the comments show the sharp division which divides the ICF."
   ireland.6.a:0 "Another rabble rouser..."
   ireland.6.b:0 "Can't we remove this man from command?"
   ireland.7.t:0 "The King is Dead!"
-  ireland.7.d:0 "Sombre news arrived from Westminster in the early hours of the morning, announcing the passing of HRH George V due to a sudden illness. The news has, predictably, seen a mixed reception in Ireland. Whilst the official response from the ruling government was limited to a tersely written message of condolences to the heir, Edward VIII, and royal family; The mood on the streets ranged from cautious celebration to outright burning of Royal Portraits.\n\nDespite the best efforts of the Police, manage clashes emerged from between groups of supporters and republicans, with injuries currently steady at the one hundred mark."
-  ireland.7.a:0 "Can't say we'll miss him entirely..."
+  ireland.7.d:0 "Sombre news arrived from Westminster in the early hours of the morning, announcing the passing of HRH George V due to a sudden illness. The news has, predictably, seen a mixed reception in Ireland. Whilst the official response from the ruling government was limited to a tersely written message of condolences to the heir, Edward VIII, and royal family; The mood on the streets ranged from sombre mourning to celebration and outright burning of Royal Portraits.\n\nDespite the best efforts of the constabulary, many of these public gatherings soon gave way to clashes between opposing groups. Unionists and Republicans alike have already begun to blame the other side."
+  ireland.7.a:0 "It is not our place to say whether we'll miss him..."
   ireland.8.t:0 "The Way Forward"
   ireland.8.a:0 "The IPP must endure this crisis alone"
   ireland.8.b:0 "Only together will Ireland survive"
-  
+  ireland.9.t:0 "Veterans' Association On Brink of Collapse"
+  ireland.9.d:0 "The Irish Veterans' Association, one of our most beloved institutions, has made a desperate appeal to Devlin's government today. "
+  ireland.9.a:0 "Reach across the aisle, we must save the IVA!"
+  ireland.9.b:0 "No time to compromise, get them funds now."
+  ireland.10.t:0 "ILA filling Veterans gap"
+  ireland.10.d:0 "Despite the Irish Parliament's messages of calm resolve in the face of economic crisis, the reality for many Irish families has been devastating and those who were just about surviving have been pushed into poverty and destitution. Compounded by the IVA's inability to provide given the massive surge in requests, the people feel abandoned, hungry, and ready to turn to alternate sources for help. To the dismay of Devlin and his cabinet, evidence suggest that it is the Irish Liberation Front who the people have flocked to."
+  ireland.10.a:0 "Very worrying."
+  ireland.11.t:0 "The IDL Splits!"
+  ireland.11.d:0 "Unionist YEET"
+  ireland.11.a:0 "The extremes are empowered!"
+  ireland.12.t:0 "The IDL Splits!"
+  ireland.12.d:0 "Unionist YEET"
+  ireland.12.a:0 "Welcome those who join us"
+  ireland.13.t:0 "IVA Bill Stalled In Parliament"
+  ireland.13.d:0 "Thumbs up their arse"
+  ireland.13.a:0 "Our friends in the IDL can help."
+  ireland.13.b:0 "Try and force the bill through!"
+    
   ##########################
   # IDEAS
   ##########################
@@ -87,14 +115,19 @@
   IRE_compromise_desc:0 "After the disastrous spectre of the Great Famine almost brought Ireland to its knees, Irish Members of Parliament succeeded in their campaign to repeal the Act of Union. What followed was a lengthy period of political negotiation and reform which led to the creation of the Irish Commonwealth, known as the 'Dublin Negotiations'. Though these efforts were lauded as a success and victory of freedom and democracy, there would always exist those on both sides who would see the negotiations as too much given to the other side. Unionists claim that Ireland has been handed to the Republicans. Republicans claim that parliament is in the claws of Unionists. Whatever the truth, these divisions threaten the fabric of the Irish Commonwealth."
   IRE_first_colony:0 "Scars of the First Colony"
   IRE_first_colony_desc:0 "Hundreds of years of outside rule have left their bloody mark on Ireland. Though the worst offenses of that era have been gradually reversed and repealed and in spite of ambitious government projects, the Irish Commonwealth remains one of the poorest and most divided constituent commonwealths in the British Empire."
+  IRE_first_colony2:0 "Scars of the First Colony"
+  IRE_first_colony2_desc:0 "Hundreds of years of outside rule have left their bloody mark on Ireland. Though the worst offenses of that era have been gradually reversed and repealed and in spite of ambitious government projects, the Irish Commonwealth remains one of the poorest and most divided constituent commonwealths in the British Empire."
   IRE_inexperienced_army:0 "The Green Army"
-  IRE_inexperienced_army_desc:0 "The Armed Forces of the Irish Commonwealth were cobbled together following the end of the Great War and the recognition of the Commonwealth. With each appointment to high command being a bitter political issue, the Irish Commonwealth Forces have mockingly earned the nickname of the 'Green Army', not only for the iconic Irish green but also for their lack of experience, or 'greenness'."
+  IRE_inexperienced_army_desc:0 "The Irish Commonwealth Forces had barely been assembled a year before the beginning of the Great War and the immense bloodshed which followed. Though the men who served did so with courage and tenacity, the High Command was riddled with issues, primarily stemming from each appointment being a bitter political issue. Even twenty years later, The Irish Commonwealth Forces have failed to shake their nickname; the 'Green Army', not only for the iconic Irish green but also for their lack of experience and many bungled operations."
   IRE_veterans_association:0 "The Irish Veterans' Association"
+  IRE_veterans_association_failed:0 "Crisis in the Irish Veterans' Association"
+  IRE_veterans_association_saved:0 "Irish Veterans' Association - Emergency Provisions"
   IRE_inexperienced_army2:0 "The Green Army"
   IRE_inexperienced_army2_desc:0 "The Irish Commonwealth Forces had barely been assembled a year before the beginning of the Great War and the immense bloodshed which followed. Though the men who served did so with courage and tenacity, the High Command was riddled with issues, primarily stemming from each appointment being a bitter political issue. Even twenty years later, The Irish Commonwealth Forces have failed to shake their nickname; the 'Green Army', not only for the iconic Irish green but also for their lack of experience and many bungled operations."
   IRE_encourage_local_business:0 "Irish Business Initiative"
   IRE_veterans_association_desc:0 "The Irish Veterans' Association was the result of five years of bitter fighting in the Great War and the countless Irish men and boys who went to fight; Men who would often return bloodied and broken. A rare bipartisan effort from the Irish Parliament, the Irish Veterans' Association has helped to keep Veterans and their families from returning to poverty. Though some argue the measures do not do enough to ensure the safety of these men, the IVA has become a beloved public institution."
   IRE_Irish_War:0 "The Irish Secession War"
+  
 
   ##########################
   # TOOLTIPS
@@ -102,5 +135,8 @@
   IRE_stock_crisis:0 "The Stock Crisis has arrived"
   IRE_IDL_coalition:0 "The Irish Dominion League will enter coalition"
   IRE_IPP_alone:0 "The Irish Parliamentary Party stands alone"
+  IRE_coalition_disabled:0 "§RWe will no longer be able to form a coalition.§!"
+  IRE_industrial_drive_taken:0 "The Irish Business Initiative was founded."
   
-  IRE_Country_Desc_Topbar:0 "§YThe Irish Commonwealth§! is a nation in crisis in 1933.\n\nThough Ireland narrowly avoided catastrophe during §YThe Great Famine§! of the 1840s, with vast shipments of American grain keeping the land fed during the dark years, it galvanised Irish politics and began to reshape political efforts. Through the tireless efforts of Daniel O'Connell and other now unified moderates, the hated §YAct of Union§! was repealed and the §YIrish Commonwealth§! born, placing Ireland on the same level as the other constituent commonwealths.\n\nYet this work, result of decades of politics and compromise, has always been under threat. On one side sit §YThe Unionists§!, who believe that too much has been surrendered to the nationalists and republicans. On the other side, §YThe Nationalists§!, the so-called 'Young Irelanders' and members of the §YIrish Liberation Front§!, who believe that Ireland is still shackled too closely to London and must be freed.\n\nThis tense political atmosphere was not helped by the arrival of the Great War and the men and boys of the §YIrish Commonwealth Forces§! were thrown into the fires of war. And for what? Even with victory, Ireland's situation seemed to change little, remaining one of the most poverty stricken Commonwealths.\n\nNow, in 1933, resentment bubbles under the surface..."
+  IRE_PAX_BRITANNICA_DESC:0 "Hundreds of years of English rule was brought to an end when the Irish Commonwealth was finalised and made a reality, only for the chaos of the Great War to devastate the young commonwealth. Now, Ireland is mired in crisis and the long simmering tensions threaten to tear it apart..."
+  IRE_Country_Desc_Topbar:0 "§YThe Irish Commonwealth§! is a nation in crisis in 1933.\n\nThough Ireland narrowly avoided catastrophe during §YThe Great Famine§! of the 1840s, with vast shipments of grain from the American Commonwealth just barely keeping Ireland fed during the dark years, it galvanised Irish politics and began to reshape political efforts. Through the tireless efforts of Daniel O'Connell and other now unified moderates, the hated §YAct of Union§! was repealed and the §YIrish Commonwealth§! born, placing Ireland on the same level as the other constituent commonwealths.\n\nYet this work, result of decades of politics and compromise, has always been under threat. On one side sit §YThe Unionists§!, who believe that too much has been surrendered to the nationalists and republicans. On the other side, §YThe Nationalists§!, the so-called 'Young Irelanders' and members of the §YIrish Liberation Front§!, who believe that Ireland is still shackled too closely to London and must be freed.\n\nThis tense political atmosphere was not helped by the arrival of the Great War and the men and boys of the §YIrish Commonwealth Forces§! were thrown into the fires of war. And for what? Even with victory, Ireland's situation seemed to change little, remaining one of the most poverty stricken Commonwealths.\n\nNow, in 1933, resentment bubbles under the surface..."
