--- a/localisation/PB_Parties_l_english.yml
+++ b/localisation/PB_Parties_l_english.yml
@@ -488,6 +488,23 @@
   LAK_ni_party:0 "Chiricahua Band"
   LAK_ni_party_long:0 "Chiricahua Band"
 
+  CAL_jc_party:0 "Jacobinos"
+  CAL_jc_party_long:0 "Partido Socialista de California - Jacobino" 
+  CAL_ss_party:0 "Zapatistas"
+  CAL_ss_party_long:0 "Partido Socialista de California - Zapatista"
+  CAL_lb_party:0 "Republicanos"
+  CAL_lb_party_long:0 "Partido Republicano"
+  CAL_cn_party:0 "Liberales"
+  CAL_cn_party_long:0 "Liga Nortemexicano - Liberales"
+  CAL_rc_party:0 "Conservadores"
+  CAL_rc_party_long:0 "Liga Nortemexicano - Conservador"
+  CAL_an_party:0 "Rancheros"
+  CAL_an_party_long:0 "Unión de Agricultores"
+  CAL_ds_party:0 "Leales"
+  CAL_ds_party_long:0 "Leales imperiales"
+  CAL_ni_party:0 "Sinarquistas"
+  CAL_ni_party_long:0 "Unión Nacional Sinarquista"
+  
  ############
  # POLITICAL PARTY TEMPLATE 
  ############
