mom said it's my turn on the xbox

--- a/localisation/PB_countries_l_english.yml
+++ b/localisation/PB_countries_l_english.yml
@@ -125,22 +125,22 @@
  JAP_cn_ADJ:0 "Japanese"
  JAP_an_ADJ:0 "Japanese"
 
- AME_ni:0 "United Commonwealth"
- AME_ni_DEF:0 "United Commonwealth"
- AME_ds:0 "United Commonwealth"
- AME_ds_DEF:0 "United Commonwealth"
- AME_rc:0 "United Commonwealth"
- AME_rc_DEF:0 "The United Commonwealth"
- AME_an:0 "United Commonwealth "
- AME_an_DEF:0 "United Commonwealth"
- AME_cn:0 "United Commonwealth"
- AME_cn_DEF:0 "United Commonwealth"
- AME_lb:0 "United Commonwealth"
- AME_lb_DEF:0 "The United Commonwealth"
- AME_ss:0 "United Commonwealth"
- AME_ss_DEF:0 "The United Commonwealth"
- AME_jc:0 "United Commonwealth"
- AME_jc_DEF:0 "United Commonwealth"
+ AME_ni:0 "Commonwealth of America"
+ AME_ni_DEF:0 "the Commonwealth of America"
+ AME_ds:0 "Commonwealth of America"
+ AME_ds_DEF:0 "the Commonwealth of America"
+ AME_rc:0 "Commonwealth of America"
+ AME_rc_DEF:0 "the Commonwealth of America"
+ AME_an:0 "Commonwealth of America "
+ AME_an_DEF:0 "the Commonwealth of America"
+ AME_cn:0 "Commonwealth of America"
+ AME_cn_DEF:0 "the Commonwealth of America"
+ AME_lb:0 "Commonwealth of America"
+ AME_lb_DEF:0 "the Commonwealth of America"
+ AME_ss:0 "Commonwealth of America"
+ AME_ss_DEF:0 "the Commonwealth of America"
+ AME_jc:0 "Republic of America"
+ AME_jc_DEF:0 "the Republic of America"
  AME_ni_ADJ:0 "American"
  AME_rc_ADJ:0 "American"
  AME_lb_ADJ:0 "American"
