--- a/localisation/PB_Italy_l_english.yml
+++ b/localisation/PB_Italy_l_english.yml
@@ -449,7 +449,12 @@ ITA_PB_Rocco_ECM:0 "Alfredo Rocco"
 ITA_PB_Pavolini_HOS:0 "Alessandro Pavolini"
 ITA_PB_Ricci_IAM:0 "Renato Ricci"
 ITA_PB_Parini_FAM:0 "Piero Parini"
+ITA_PB_Badoglio_HOS:0 "Pietro Badoglio"
+ITA_PB_Castellano_FAM:0 "Giuseppe Castellano"
+ITA_PB_Ambrosio_IAM:0 "Vittorio Ambrosio"
+ITA_PB_Graziani:0 "Rodolfo Graziani"
 PB_Violent_Individual:0 "Violent Individual"
+PB_False_Smile:0 "False Smile"
 
 #########MISSION TREE
 ITA_PAX_BRITANNICA_DESC:0 "With the defeat of the Italian Kingdom in the Great War and the humiliating Treaty of Anzio, the Italian establishment became weak in the eyes of many. The turbulence that the democratic governments experienced in the '20s still haunt Italy in the '30s, with nationalists and socialists continueing to destabilize. Under the fresh ANI government of D'Annunzio, Italy has yet to truely recover from the economic malace of after the Great War and heal from the political violence terrorizing the streets of Naples, Rome and Milan. Can the ANI truely recover Italian glory?"
