Started some work on Spain
plus Italy stuff

--- a/localisation/PB_Spain_l_english.yml
+++ b/localisation/PB_Spain_l_english.yml
@@ -3,69 +3,26 @@
   ##########################
   # IDEAS
   ##########################
-PB_SPR_return_to_civil_economy:0 "Return to Civil Economy"
-SPR_PB_Mola_HOG:0 "Emilio Mola"
-PB_Old_Civil_Engineer:0 "Old Civil Engineer"
-SPR_PB_Alfonso_Pena_Boeuf_EM:0 "Alfonso Peña Boeuf"
-SPR_PB_Francisco_Gomez_Jordanaa_Sousa_FM:0 "Francisco Gómez-Jordana Sousa"
-SPR_PB_Ramon_Serrano_Suner_IM:0 "Ramón Serrano Suñer"
-PB_Failed_Agriculture_Minister:0 "Failed Agricultural Minister"
-SPR_PB_Raimundo_Fernandez_Cuesta:0 "Raimundo Fernández-Cuesta"
-PB_SPR_reconstruction_authority_3:0 "Autoridad Española de Reconstrucción" 
-PB_SPR_reconstruction_authority_2:0 "Autoridad Española de Reconstrucción"
-PB_SPR_return_of_the_vehicle_industry:0 "Return of the Vehicle Industry"
-SPR_unemployment_down:0 "§YUnemployment Issue lowers§!"
-PB_SPR_working_factories:0 "Working Factories"
-PB_SPR_working_factories_1:0 "Working Factories"
-PB_SPR_military_coup_3:0 "The Mary coup"
-PB_SPR_military_coup_3_desc:0 "The recent coup d’état against the old republican government still is in full swing, as the nationalist military has started its purging of the old radical socialists of the PSOE and CNT, while the republican forces reorganize themselves in the city of Barcelona. While Mola does not enjoy the support of most of the Spanish populace, he does reign with the support of the national armed forces and navy and is able to consolidate the power of the loose coalition, known as the national movement. This reign of terror, while effective in consolidating power, has enraged the unions and socialist workers of Spain and many fear that the tension can easily spark another civil conflict."
-PB_SPR_reconstruction_authority_1:0 "Autoridad Española de Reconstrucción"
-PB_SPR_unemployment_issue:0 "Unemployment Issue (Dramatic)"
-PB_SPR_unemployment_issue_1:0 "Unemployment Issue (Big)"
-PB_SPR_unemployment_issue_2:0 "Unemployment Issue (Medium)"
-PB_SPR_unemployment_issue_3:0 "Unemployment Issue (Small)"
-PB_SPR_military_coup_2:0 "The Mary coup"
-PB_SPR_military_coup_2_desc:0 "The recent coup d’état against the old republican government still is in full swing, as the nationalist military has started its purging of the old radical socialists of the PSOE and CNT, while the republican forces reorganize themselves in the city of Barcelona. While Mola does not enjoy the support of most of the Spanish populace, he does reign with the support of the national armed forces and navy and is able to consolidate the power of the loose coalition, known as the national movement. This reign of terror, while effective in consolidating power, has enraged the unions and socialist workers of Spain and many fear that the tension can easily spark another civil conflict."
-PB_SPR_reconstruction_authority:0 "Autoridad Española de Reconstrucción"
-PB_SPR_unions_gone:0 "Crushed Unions"
-PB_SPR_unions_stay:0 "Cooperation with the Unions"
-PB_SPR_angry_farmers:0 "Angered Farmers"
-PB_SPR_angry_farmers_desc:0 "The temporary military tax enforced by the military government has clearly angered a large group of both conservative and socialist farmers, leaving the tax to be almost worthless."
-PB_SPR_military_training:0 "Military Training"
-PB_SPR_military_training_1:0 "Military Training"
-PB_SPN_republican_front:0 "Republican Front"
-PB_SPN_republican_front_desc:0 "The Republican Front is the term used to describe the coalition of the Popular Front plus the Liberal Party during the Second Spanish Civil War. This wartime coalition was mostly born out of shared hatred for the new, nationalist Spanish government that had overthrown the old Republican order in 1932. While it is an united front, the coalition is clearly divided along ideological lines as its members range from anarcho-jacobins to conservative republicans."
-PB_SPR_ultimatum_accepted:0 "Military Restrictions"
-PB_NI_Spanish_Faith:0 "Spanish Faith"
-PB_SPR_national_movement_split:0 "Movimiento Nacional Divided"
-PB_SPR_national_movement_split_desc:0 "The National Movement is a loose coalition of several right, to far-right political parties working together against the socialist menace of the Republican authority. This National Movement, however, is not a ideological monolith and exists out of several political branches: Falangists, Legitimists, Carlists and the old CEDA all struggle for control of the state apparatus and political infighting has become increasingly prominent, with political assassination and other dirty tricks not being as unusual as during the Second Republic. The next congress of the National Movement will finally make clear which faction will become the biggest of the Movement."
-PB_SPR_national_movement_split_2:0 "Movimiento Nacional Disbanded"
-PB_SPR_national_movement_split_2_desc:0 "Following the disaster of the final vote this month, the once unifying national movement has been disbanded by the carlist and falangist elements of the former coalition out of spite for their non-victory. Only time will tell what Spain awaits."
-PB_SPR_military_coup:0 "The Mary coup"
-PB_SPR_military_coup_desc:0 "The recent coup d’état against the old republican government still is in full swing, as the nationalist military has started its purging of the old radical socialists of the PSOE and CNT, while the republican forces reorganize themselves in the city of Barcelona. While Mola does not enjoy the support of most of the Spanish populace, he does reign with the support of the national armed forces and navy and is able to consolidate the power of the loose coalition, known as the national movement. This reign of terror, while effective in consolidating power, has enraged the unions and socialist workers of Spain and many fear that the tension can easily spark another civil conflict."
-PB_SPR_military_coup_1:0 "The Mary coup"
-PB_SPR_military_coup_1_desc:0 "The recent coup d’état against the old republican government still is in full swing, as the nationalist military has started its purging of the old radical socialists of the PSOE and CNT, while the republican forces reorganize themselves in the city of Barcelona. While Mola does not enjoy the support of most of the Spanish populace, he does reign with the support of the national armed forces and navy and is able to consolidate the power of the loose coalition, known as the national movement. This reign of terror, while effective in consolidating power, has enraged the unions and socialist workers of Spain and many fear that the tension can easily spark another civil conflict."
-PB_SPR_treaty_1:0 "Treaty of A Coruña"
-PB_SPR_treaty_1_desc:0 "The Treaty of A Coruña is for many Spanish nationalists a humiliation Spain has to overcome in the next decade. The Treaty, signed by the chaotic second Spanish Republic in 1912, made an end to Spanish hegemony overseas and limited the Spanish army, navy and airforce. Spain and its Bourbon dynasty also were forced to take the blame for the Great War partly, sharing it with France, and thus being forced to repay the Entente for the costly Iberian campaign. The treaty is seen differently by the different groups of the Movimiento Nacional, but all parties do agree upon ending the treaty in the near future. \n\n§RIf Spain yields an army above 100 000 men or if Spain has accepted a Bourbon monarch on her throne, Britain will demand us to follow the treaty of A Coruña or face the consequences of war against the full force of Britain and the Commonwealth of Independent States.§!"
+
   ##########################
   # PARTIES
   ##########################
 SPR_ni_party_long:0 "Falange Española"
 SPR_ni_party:0 "FE"
-SPR_ds_party_long:0 "Junta Militar"
-SPR_ds_party:0 "Junta Militar"
+SPR_ds_party_long:0 "Renovación Española"
+SPR_ds_party:0 "RE"
 SPR_rc_party_long:0 "Comunión Tradicionalista"
 SPR_rc_party:0 "CT"
-SPR_cn_party_long:0 "Confederación Española de Derechas Autónomas"
-SPR_cn_party:0 "CEDA"
-SPR_lb_party_long:0 "Frente Popular"
-SPR_lb_party:0 "FP"
+SPR_cn_party_long:0 "Acción Popular"
+SPR_cn_party:0 "AP"
+SPR_lb_party_long:0 "Izquierdda Republicana"
+SPR_lb_party:0 "IR"
 SPR_an_party_long:0 "Partido Anarquista"
 SPR_an_party:0 "PA"
-SPR_ss_party_long:0 "Frente Popular"
-SPR_ss_party:0 "FP"
-SPR_jc_party_long:0 "Frente Popular"
-SPR_jc_party:0 "FP"
+SPR_ss_party_long:0 "Partido Socialista Obrero Español"
+SPR_ss_party:0 "PSOE"
+SPR_jc_party_long:0 "Partido Popular Ibérica Jacobina"
+SPR_jc_party:0 "PPIJ"
 
 
 
@@ -78,104 +35,7 @@ SPR_jc_party:0 "FP"
   ##########################
   # FOCUSSES
   ##########################
-SPR_the_old_civilian_industry:0 "Our Former Economy"
-SPR_rebuild_spain:0 "Spanish Reconstruction Authority"
-SPR_the_wine_industry:0 "Rebuild the Wine Industry"
-SPR_kickstart_the_fishing_industry:0 "Kickstart Fishing"
-SPR_vehicle_industry:0 "Restart the Vehicle Industry"
-SPR_attract_foreign_businessmen:0 "Attract Foreign Investors"
-SPR_stimulate_trade:0 "Stimulate Trade"
-SPR_support_agricultural_sector:0 "Modernize Agricultural Methods"
-SPR_improve_civilian_output:0 "Increase Civilian Output"
-SPR_recovery_of_entertainment:0 "New Entertainment Industry"
-SPR_provide_for_the_city:0 "Food for the Cities"
-SPR_conversion_to_civilian_economy:0 "New Civilian Economy"
-SPR_promote_sherry:0 "Promote Sherry"
-SPR_the_old_heavy_industry:0 "The Current Economy"
-SPR_revive_the_steel_industry:0 "Blow new Life into the Steel Industry"
-SPR_demobilization:0 "Partial Demobilization"
-SPR_expand_steel_ventures:0 "Expand Steel Ventures"
-SPR_diversify_our_economy:0 "Deal with the Steel Barons"
-SPR_economic_conversion:0 "Rebuild Civilian Industry"
-SPR_surpress_the_black_market:0 "Surpress the Black Market"
-SPR_criminalize_drug_traficking:0 "Criminalize Drug Trafficking"
-SPR_new_education_curriculum:0 "Nationalist Education Curriculum"
-SPR_back_to_the_factory_floors:0 "Back to the Factories"
-SPR_production_quotas:0 "New Production Quotas"
-SPR_civil_war_averted:0 "§GSpain has been safed from civil conflict by crushing the Republican Forces§!"
-SPR_coup_ongoing:0 "§RThe Mary Coup is ongoing§!"
-SPR_mola_government:0 "Mola in Power"
-SPR_quick_military_manuevers:0 "Quick Military Manuevers"
-SPR_crackdown_on_catalan_nationalism:0 "Criminalize Catalan Nationalism"
-SPR_crush_anarchists:0 "Cure our Anarchist Plague"
-SPR_temporary_tax_increase:0 "Temporary Military Tax"
-SPR_arrest_disloyal_farmers:0 "Arrest Disloyal Farmers"
-SPR_interogate_cnt_leaders:0 "The CNT-FAI Problem"
-SPR_execute_them:0 "The Blade Awaits, Señor"
-SPR_deal_with_the_unions:0 "Mutual Friendship with the Unions"
-SPR_clean_hands_to_show:0 "Observe our Clean Hands!"
-SPR_cooperate_cnt:0 "§GThe government cooperates with the CNT-FAI unions§!"
-SPR_fucked_cnt:0 "§YThe government refuses to cooperate with the CNT-FAI unions§!"
-SPR_angry_farm_flag:0 "§YFarmers refuse to pay our temporary tax§!"
-SPR_break_the_popular_front:0 "Dismember the Popular Front"
-SPR_falange_in_power:0 "Falange in Power"
-SPR_awaken_spanish_irredentism:0 "Awaken Spanish Irredentism"
-SPR_ban_the_republican_flag:0 "Ban the Republican Flag"
-SPR_denounce_catalan_nationalism:0 "Denounce Catalan Nationalism"
-SPR_basque_friendship:0 "Appreciate Basque Loyalty"
-SPR_crackdown_upon_carlism:0 "The Basque Bastion of Carlism"
-SPR_contest_british_gibraltar:0 "Fortify the Gibraltar Border"
-SPR_promote_militarism:0 "Glorify Imperialism"
-SPR_international_falangist_volunteers:0 "International Falangist Volunteers"
-SPR_purge_carlist_elements:0 "Bar Carlists from Government"
-SPR_nationalist_mapping_program:0 "Hand out Nationalist Maps"
-SPR_catholic_nationalism:0 "Proud to be Catholic"
-SPR_visigothic_archeology:0 "Visigothic Archeology Programs"
-SPR_portugal_as_province:0 "Portugal as Spanish Province"
-SPR_support_hispanidad:0 "Hispanidad"
-SPR_reconsider_the_economic_policy:0 "Reform the Economy"
-SPR_national_syndicalist_economics:0 "National Syndicalism"
-SPR_natalist_policies:0 "Natalism"
-SPR_cooperation_of_classes:0 "Cooperation of Classes"
-SPR_servitude_to_the_united_nation:0 "Servitude to the United Nation"
-SPR_humanize_the_cogs:0 "Humanize the Cogs"
-SPR_employee_syndicates:0 "Employee Syndicates"
-SPR_employer_syndicates:0 "Employer Syndicates"
-SPR_nationalize_credit_facilities:0 "Nationalize Credit Facilities"
-SPR_adress_the_foreign_policy:0 "Adress the Foreign Policy"
-SPR_militarize_foreign_policy:0 "Violence is our Policy!"
-SPR_great_military_budget:0 "Increase Military Spending"
-SPR_end_conservative_militarism:0 "Purge Conservatism in the Military"
-SPR_virtues_of_economic_violence:0 "Virtues of Economic Violence"
-SPR_sweeping_agrarian_reforms:0 "Sweeping Agricultural Reforms"
-SPR_stimulate_industrial_expansion:0 "Stimulate Industry"
-SPR_lower_loan_interest:0 "Lower Loan Interest"
-SPR_innovation_in_the_factory:0 "Factory Development"
-SPR_improve_farming_techniques:0 "Improved Farming Techniques"
-SPR_reclaim_agrarian_wastelands:0 "Reclaim Agrarian Wastelands"
-SPR_seek_for_french_recognision:0 "Ask for French Recognition"
-SPR_nantes_conference:0 "Nantes Conference"
-SPR_tone_down_irredentism:0 "Lower Irredentist Voices"
-SPR_prepare_for_invasion:0 "Prepare the Invasion Forces"
-SPR_send_an_ultimatum:0 "The Galicia Ultimatum"
-SPR_join_the_revanchiste_pact:0 "Join the Revanchist Pacte"
-SPR_militarize_the_portuguese_border:0 "Militarize the Portuguese Border"
-SPR_treaty_of_a_coruna:0 "Treaty of A Coruña"
-SPR_renew_the_terms:0 "Renew the Terms"
-SPR_propaganda_use:0 "Propaganda Use"
-SPR_secret_rearmement:0 "Secret Rearmament"
-SPR_build_up_industry:0 "Warplan Verde"
-SPR_rebuild_an_airforce:0 "Rebuild the Spanish Airforces"
-SPR_propaganda_use:0 "Propaganda Against the British"
-SPR_join_your_regional_militia:0 "Join your Regional Division!"
-SPR_reveal_our_production:0 "Reveal our Military"
-SPR_meeting_in_valencia:0 "Meeting in Valencia"
-SPR_apply_french_pressure:0 "Apply French Pressure"
-SPR_demand_the_right_to_rearm:0 "Demand the Right to Rearm"
-SPR_diplomatic_victory:0 "Diplomatic Victory in Valencia"
-SPR_PART_1:0 "§GHas improved the Mining Sector§!"
-SPR_PART_2:0 "§GHas cracked down upon the Drug Market§!"
-SPR_PART_3:0 "§GHas restarted the Old Factories§!"
+
   ##########################
   # EVENTS
   ##########################
