More Prussian Stuff
Let me know if theres too many colours in the loc of texts

--- a/localisation/PB_countries_l_english.yml
+++ b/localisation/PB_countries_l_english.yml
@@ -3407,8 +3407,8 @@
  PRS_ds_DEF:0 "Independent State of Prussia"
  PRS_rc:0 "Independent State of Prussia"
  PRS_rc_DEF:0 "The Independent State of Prussia"
- PRS_an:0 "Independent State of Prussia "
- PRS_an_DEF:0 "Independent State of Prussia"
+ PRS_an:0 "Prussian Republic"
+ PRS_an_DEF:0 "the Prussian Republic"
  PRS_cn:0 "Independent State of Prussia"
  PRS_cn_DEF:0 "Independent State of Prussia"
  PRS_lb:0 "Independent State of Prussia"
